fix overflow problem

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     background: linear-gradient(45deg, #2c3e50, #942a1f);
     position: relative;
     cursor: none;
+    overflow: hidden;
 }
 
 .star {
